src/test/vm/dv_i0.php.exp
HipHop Fatal error: syntax error, unexpected ')' in src/test/vm/dv_i0.php on line 3
