src/test/vm/dv_i0.php
<?php
class A {
  public function a(int $a1 = ) {}
}
